Update development docs

--- a/.env.example
+++ b/.env.example
@@ -13,7 +13,7 @@ DB_PASSWORD=database_password
 
 WP_ENV=development
 WP_HOME=http://localhost:8080
-WP_SITEURL=${WP_HOME}/wordpress
+WP_SITEURL=${WP_HOME}/wp
 
 # Generate your keys here: https://roots.io/salts.html
 AUTH_KEY='generateme'
