--- a/hack/docker/templates/php-fpm.d/www.conf
+++ b/hack/docker/templates/php-fpm.d/www.conf
@@ -33,7 +33,7 @@ decorate_workers_output = no
 
 ; Access logging from php
 access.log = {{ default "/proc/self/fd/2" .Env.PHP_ACCESS_LOG }}
-access.format = {{ default "%R - %u %t \"%m %r\" %s" .Env.PHP_ACCESS_LOG_FORMAT | quote }}
+access.format = {{ default "%R - %u %t \"%m %r\" %s [%n]" .Env.PHP_ACCESS_LOG_FORMAT | quote }}
 {{- end }}
 
 ; Log slow requests
