Add libzip dep for php zip extension

--- a/hack/docker/build-scripts/php-extensions.full.yaml
+++ b/hack/docker/build-scripts/php-extensions.full.yaml
@@ -40,7 +40,10 @@
       - "libxslt-dev"
 - name: zip
   build:
+    args:
+      - "--with-libzip=/usr/include/"
     depends:
+      - "libzip-dev"
       - "zlib1g-dev"
 
 #
