--- a/.drone.yml
+++ b/.drone.yml
@@ -1,6 +1,7 @@
 matrix:
   include:
-    - PHP_VERSION: 7.3.3
+    - PHP_VERSION: 7.3.4
+    - PHP_VERSION: 7.2.17
 
 clone:
   git:
@@ -62,7 +63,7 @@ pipeline:
       - PHP_VERSION=${PHP_VERSION}
     target: wordpress
     cache_from: quay.io/presslabs/php-runtime:testing-${DRONE_BRANCH}-${PHP_VERSION}
-    tags: ["${DRONE_BRANCH%%-branch}-latest", "${DRONE_BRANCH%%-branch}-r${DRONE_BUILD_NUMBER}"]
+    tags: ["${DRONE_BRANCH%%-branch}-${PHP_VERSION}-latest", "${DRONE_BRANCH%%-branch}-${PHP_VERSION}-r${DRONE_BUILD_NUMBER}"]
     secrets:
       - source: QUAY_TOKEN
         target: DOCKER_PASSWORD
