Cache directly built keys

--- a/.env.example
+++ b/.env.example
@@ -6,6 +6,10 @@ DB_PASSWORD=database_password
 # DB_HOST=localhost
 # DB_PREFIX=wp_
 
+# DB_TEST_USER=wordpress
+# DB_TEST_PASSWORD=wordpress
+# DB_TEST_HOST=127.0.0.1:3306
+
 # UPLOADS_HTTP_PROXY=<host>:<port>
 
 # UPLOADS_FTP_HOST=<host>:<port>
