Add and configure openresty

--- a/hack/docker/templates/nginx-conf.d/50-mime-types.conf
+++ b/hack/docker/templates/nginx-conf.d/50-mime-types.conf
@@ -2,4 +2,4 @@
 
 types_hash_max_size 2048;
 default_type application/octet-stream;
-include /etc/nginx/mime.types;
+include /usr/local/openresty/nginx/conf/mime.types;
