--- a/hack/docker/templates/nginx-vhost-conf.d/50-gcs-media.conf
+++ b/hack/docker/templates/nginx-vhost-conf.d/50-gcs-media.conf
@@ -2,7 +2,7 @@
 
 {{- if hasPrefix "gs://" (default "" .Env.MEDIA_BUCKET) }}
 {{- $gcs_bucket := (substr 5 -1 (default "" .Env.MEDIA_BUCKET)) }}
-{{- $gcs_prefix := (list "/" (default "" .Env.MEDIA_BUCKET_PREFIX | clean | trimAll "/") | join "") | trimSuffix "/" }}
+{{- $gcs_prefix := (list "/" (default "/" .Env.MEDIA_BUCKET_PREFIX | clean | trimAll "/") | join "") | trimSuffix "/" }}
 
 location = /.token {
     internal;
