--- a/hack/docker/templates/nginx-vhost-conf.d/80-index.conf
+++ b/hack/docker/templates/nginx-vhost-conf.d/80-index.conf
@@ -8,5 +8,5 @@ location ~ \.php$ {
     fastcgi_pass   $upstream;
     fastcgi_read_timeout {{ max 60 (add 10 (default "30" .Env.PHP_REQUEST_TIMEOUT | atoi)) }};
     fastcgi_index  index.php;
-    include        fastcgi.conf;
+    include        /usr/local/openresty/nginx/conf/fastcgi.conf;
 }
