--- a/hack/docker/templates/supervisor.conf
+++ b/hack/docker/templates/supervisor.conf
@@ -15,7 +15,7 @@ startsecs = 10
 priority = 5
 
 [program:nginx]
-command = /usr/sbin/nginx -g 'daemon off;' -c /usr/local/docker/etc/nginx.conf
+command = /usr/bin/openresty -g 'daemon off;' -c /usr/local/docker/etc/nginx.conf
 stdout_logfile = /dev/stdout
 stdout_logfile_maxbytes=0
 stderr_logfile = /dev/stderr
